[gd_scene load_steps=9 format=2]

[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://BulletManager.gd" type="Script" id=3]
[ext_resource path="res://ScreenClamp.gd" type="Script" id=4]
[ext_resource path="res://Characters/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Spawner/Spawner.gd" type="Script" id=6]
[ext_resource path="res://Sprite/Tanks/Tilesheet/terrainTiles_default.png" type="Texture" id=7]

[sub_resource type="TileSet" id=1]
0/name = "terrainTiles_default.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 640, 256 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "terrainTiles_default.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 640, 256 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "terrainTiles_default.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "terrainTiles_default.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 128, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "terrainTiles_default.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 128, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="Main" type="Node2D"]
position = Vector2( 70, 40 )
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
z_as_relative = false
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -2, 1610612738, 0, -1, 1610612738, 0, -65536, 1610612738, 0, -65535, 1610612738, 0, -65534, 1610612738, 0, -65533, 1610612738, 0, -65532, 1610612738, 0, -65531, 1610612738, 0, -65530, 1610612738, 0, -65529, 1610612738, 0, -65528, 1610612738, 0, -65527, 1610612738, 0, -65526, 1610612738, 0, -65525, 1610612738, 0, -65524, 1610612738, 0, -65523, 1610612738, 0, -65522, 1610612738, 0, -65521, 1610612738, 0, -65520, 1610612738, 0, -65519, 1610612738, 0, -65518, 1610612738, 0, -65517, 1610612738, 0, -65516, 1610612738, 0, -65515, 1610612738, 0, -65514, 1610612738, 0, -65513, 1610612738, 0, -65512, 1610612738, 0, -65511, 1610612738, 0, -65510, 1610612738, 0, -65509, 1610612738, 0, -65508, 1610612738, 0, 65534, 1610612738, 0, 65535, 1610612738, 0, 0, 1610612738, 0, 1, 1610612738, 0, 2, 1610612738, 0, 3, 1610612738, 0, 4, 1610612738, 0, 5, 1610612738, 0, 6, 1610612738, 0, 7, 1610612738, 0, 8, 1610612738, 0, 9, 1610612738, 0, 10, 1610612738, 0, 11, 1610612738, 0, 12, 1610612738, 0, 13, 1610612738, 0, 14, 1610612738, 0, 15, 1610612738, 0, 16, 1610612738, 0, 17, 1610612738, 0, 18, 1610612738, 0, 19, 1610612738, 0, 20, 1610612738, 0, 21, 1610612738, 0, 22, 1610612738, 0, 23, 1610612738, 0, 24, 1610612738, 0, 25, 1610612738, 0, 26, 1610612738, 0, 27, 1610612738, 0, 28, 1610612738, 0, 131070, 1610612738, 0, 131071, 1610612738, 0, 65536, 1610612738, 0, 65537, 1610612738, 0, 65538, 1610612738, 0, 65539, 1610612738, 0, 65540, 1610612738, 0, 65541, 1610612738, 0, 65542, 1610612738, 0, 65543, 1610612738, 0, 65544, 1610612738, 0, 65545, 1610612738, 0, 65546, 1610612738, 0, 65547, 1610612738, 0, 65548, 1610612738, 0, 65549, 1610612738, 0, 65550, 1610612738, 0, 65551, 1610612738, 0, 65552, 1610612738, 0, 65553, 1610612738, 0, 65554, 1610612738, 0, 65555, 1610612738, 0, 65556, 1610612738, 0, 65557, 1610612738, 0, 65558, 1610612738, 0, 65559, 1610612738, 0, 65560, 1610612738, 0, 65561, 1610612738, 0, 65562, 1610612738, 0, 65563, 1610612738, 0, 65564, 1610612738, 0, 196606, 1610612738, 0, 196607, 1610612738, 0, 131072, 1610612738, 0, 131073, 1610612738, 0, 131074, 1610612738, 0, 131075, 1610612738, 0, 131076, 1610612738, 0, 131077, 1610612738, 0, 131078, 1610612738, 0, 131079, 1610612738, 0, 131080, 1610612738, 0, 131081, 1610612738, 0, 131082, 1610612738, 0, 131083, 1610612738, 0, 131084, 1610612738, 0, 131085, 1610612738, 0, 131086, 1610612738, 0, 131087, 1610612738, 0, 131088, 1610612738, 0, 131089, 1610612738, 0, 131090, 1610612738, 0, 131091, 1610612738, 0, 131092, 1610612738, 0, 131093, 1610612738, 0, 131094, 1610612738, 0, 131095, 1610612738, 0, 131096, 1610612738, 0, 131097, 1610612738, 0, 131098, 1610612738, 0, 131099, 1610612738, 0, 131100, 1610612738, 0, 262142, 1610612738, 0, 262143, 1610612738, 0, 196608, 1610612738, 0, 196609, 1610612738, 0, 196610, 1610612738, 0, 196611, 1610612738, 0, 196612, 1610612738, 0, 196613, 1610612738, 0, 196614, 1610612738, 0, 196615, 1610612738, 0, 196616, 1610612738, 0, 196617, 1610612738, 0, 196618, 1610612738, 0, 196619, 1610612738, 0, 196620, 1610612738, 0, 196621, 1610612738, 0, 196622, 1610612738, 0, 196623, 1610612738, 0, 196624, 1610612738, 0, 196625, 1610612738, 0, 196626, 1610612738, 0, 196627, 1610612738, 0, 196628, 1610612738, 0, 196629, 1610612738, 0, 196630, 1610612738, 0, 196631, 1610612738, 0, 196632, 1610612738, 0, 196633, 1610612738, 0, 196634, 1610612738, 0, 196635, 1610612738, 0, 196636, 1610612738, 0, 327678, 1610612738, 0, 327679, 1610612738, 0, 262144, 1610612738, 0, 262145, 1610612738, 0, 262146, 1610612738, 0, 262147, 1610612738, 0, 262148, 1610612738, 0, 262149, 1610612738, 0, 262150, 1610612738, 0, 262151, 1610612738, 0, 262152, 1610612738, 0, 262153, 1610612738, 0, 262154, 1610612738, 0, 262155, 1610612738, 0, 262156, 1610612738, 0, 262157, 1610612738, 0, 262158, 1610612738, 0, 262159, 1610612738, 0, 262160, 1610612738, 0, 262161, 1610612738, 0, 262162, 1610612738, 0, 262163, 1610612738, 0, 262164, 1610612738, 0, 262165, 1610612738, 0, 262166, 1610612738, 0, 262167, 1610612738, 0, 262168, 1610612738, 0, 262169, 1610612738, 0, 262170, 1610612738, 0, 262171, 1610612738, 0, 262172, 1610612738, 0, 393214, 1610612738, 0, 393215, 1610612738, 0, 327680, 1610612738, 0, 327681, 1610612738, 0, 327682, 1610612738, 0, 327683, 1610612738, 0, 327684, 1610612738, 0, 327685, 1610612738, 0, 327686, 1610612738, 0, 327687, 1610612738, 0, 327688, 1610612738, 0, 327689, 1610612738, 0, 327690, 1610612738, 0, 327691, 1610612738, 0, 327692, 1610612738, 0, 327693, 1610612738, 0, 327694, 1610612738, 0, 327695, 1610612738, 0, 327696, 1610612738, 0, 327697, 1610612738, 0, 327698, 1610612738, 0, 327699, 1610612738, 0, 327700, 1610612738, 0, 327701, 1610612738, 0, 327702, 1610612738, 0, 327703, 1610612738, 0, 327704, 1610612738, 0, 327705, 1610612738, 0, 327706, 1610612738, 0, 327707, 1610612738, 0, 327708, 1610612738, 0, 458750, 1610612738, 0, 458751, 1610612738, 0, 393216, 1610612738, 0, 393217, 1610612738, 0, 393218, 1610612738, 0, 393219, 1610612738, 0, 393220, 1610612738, 0, 393221, 1610612738, 0, 393222, 1610612738, 0, 393223, 1610612738, 0, 393224, 1610612738, 0, 393225, 1610612738, 0, 393226, 1610612738, 0, 393227, 1610612738, 0, 393228, 1610612738, 0, 393229, 1610612738, 0, 393230, 1610612738, 0, 393231, 1610612738, 0, 393232, 1610612738, 0, 393233, 1610612738, 0, 393234, 1610612738, 0, 393235, 1610612738, 0, 393236, 1610612738, 0, 393237, 1610612738, 0, 393238, 1610612738, 0, 393239, 1610612738, 0, 393240, 1610612738, 0, 393241, 1610612738, 0, 393242, 1610612738, 0, 393243, 1610612738, 0, 393244, 1610612738, 0, 524286, 1610612738, 0, 524287, 1610612738, 0, 458752, 1610612738, 0, 458753, 1610612738, 0, 458754, 1610612738, 0, 458755, 1610612738, 0, 458756, 1610612738, 0, 458757, 1610612738, 0, 458758, 1610612738, 0, 458759, 1610612738, 0, 458760, 1610612738, 0, 458761, 1610612738, 0, 458762, 1610612738, 0, 458763, 1610612738, 0, 458764, 1610612738, 0, 458765, 1610612738, 0, 458766, 1610612738, 0, 458767, 1610612738, 0, 458768, 1610612738, 0, 458769, 1610612738, 0, 458770, 1610612738, 0, 458771, 1610612738, 0, 458772, 1610612738, 0, 458773, 1610612738, 0, 458774, 1610612738, 0, 458775, 1610612738, 0, 458776, 1610612738, 0, 458777, 1610612738, 0, 458778, 1610612738, 0, 458779, 1610612738, 0, 458780, 1610612738, 0, 589822, 1610612738, 0, 589823, 1610612738, 0, 524288, 1610612738, 0, 524289, 1610612738, 0, 524290, 1610612738, 0, 524291, 1610612738, 0, 524292, 1610612738, 0, 524293, 1610612738, 0, 524294, 1610612738, 0, 524295, 1610612738, 0, 524296, 1610612738, 0, 524297, 1610612738, 0, 524298, 1610612738, 0, 524299, 1610612738, 0, 524300, 1610612738, 0, 524301, 1610612738, 0, 524302, 1610612738, 0, 524303, 1610612738, 0, 524304, 1610612738, 0, 524305, 1610612738, 0, 524306, 1610612738, 0, 524307, 1610612738, 0, 524308, 1610612738, 0, 524309, 1610612738, 0, 524310, 1610612738, 0, 524311, 1610612738, 0, 524312, 1610612738, 0, 524313, 1610612738, 0, 524314, 1610612738, 0, 524315, 1610612738, 0, 524316, 1610612738, 0, 655358, 1610612738, 0, 655359, 1610612738, 0, 589824, 1610612738, 0, 589825, 1610612738, 0, 589826, 1610612738, 0, 589827, 1610612738, 0, 589828, 1610612738, 0, 589829, 1610612738, 0, 589830, 1610612738, 0, 589831, 1610612738, 0, 589832, 1610612738, 0, 589833, 1610612738, 0, 589834, 1610612738, 0, 589835, 1610612738, 0, 589836, 1610612738, 0, 589837, 1610612738, 0, 589838, 1610612738, 0, 589839, 1610612738, 0, 589840, 1610612738, 0, 589841, 1610612738, 0, 589842, 1610612738, 0, 589843, 1610612738, 0, 589844, 1610612738, 0, 589845, 1610612738, 0, 589846, 1610612738, 0, 589847, 1610612738, 0, 589848, 1610612738, 0, 589849, 1610612738, 0, 589850, 1610612738, 0, 589851, 1610612738, 0, 589852, 1610612738, 0, 720894, 1610612738, 0, 720895, 1610612738, 0, 655360, 1610612738, 0, 655361, 1610612738, 0, 655362, 1610612738, 0, 655363, 1610612738, 0, 655364, 1610612738, 0, 655365, 1610612738, 0, 655366, 1610612738, 0, 655367, 1610612738, 0, 655368, 1610612738, 0, 655369, 1610612738, 0, 655370, 1610612738, 0, 655371, 1610612738, 0, 655372, 1610612738, 0, 655373, 1610612738, 0, 655374, 1610612738, 0, 655375, 1610612738, 0, 655376, 1610612738, 0, 655377, 1610612738, 0, 655378, 1610612738, 0, 655379, 1610612738, 0, 655380, 1610612738, 0, 655381, 1610612738, 0, 655382, 1610612738, 0, 655383, 1610612738, 0, 655384, 1610612738, 0, 655385, 1610612738, 0, 655386, 1610612738, 0, 655387, 1610612738, 0, 655388, 1610612738, 0, 786430, 1610612738, 0, 786431, 1610612738, 0, 720896, 1610612738, 0, 720897, 1610612738, 0, 720898, 1610612738, 0, 720899, 1610612738, 0, 720900, 1610612738, 0, 720901, 1610612738, 0, 720902, 1610612738, 0, 720903, 1610612738, 0, 720904, 1610612738, 0, 720905, 1610612738, 0, 720906, 1610612738, 0, 720907, 1610612738, 0, 720908, 1610612738, 0, 720909, 1610612738, 0, 720910, 1610612738, 0, 720911, 1610612738, 0, 720912, 1610612738, 0, 720913, 1610612738, 0, 720914, 1610612738, 0, 720915, 1610612738, 0, 720916, 1610612738, 0, 720917, 1610612738, 0, 720918, 1610612738, 0, 720919, 1610612738, 0, 720920, 1610612738, 0, 720921, 1610612738, 0, 720922, 1610612738, 0, 720923, 1610612738, 0, 720924, 1610612738, 0, 851966, 1610612738, 0, 851967, 1610612738, 0, 786432, 1610612738, 0, 786433, 1610612738, 0, 786434, 1610612738, 0, 786435, 1610612738, 0, 786436, 1610612738, 0, 786437, 1610612738, 0, 786438, 1610612738, 0, 786439, 1610612738, 0, 786440, 1610612738, 0, 786441, 1610612738, 0, 786442, 1610612738, 0, 786443, 1610612738, 0, 786444, 1610612738, 0, 786445, 1610612738, 0, 786446, 1610612738, 0, 786447, 1610612738, 0, 786448, 1610612738, 0, 786449, 1610612738, 0, 786450, 1610612738, 0, 786451, 1610612738, 0, 786452, 1610612738, 0, 786453, 1610612738, 0, 786454, 1610612738, 0, 786455, 1610612738, 0, 786456, 1610612738, 0, 786457, 1610612738, 0, 786458, 1610612738, 0, 786459, 1610612738, 0, 786460, 1610612738, 0, 917502, 1610612738, 0, 917503, 1610612738, 0, 851968, 1610612738, 0, 851969, 1610612738, 0, 851970, 1610612738, 0, 851971, 1610612738, 0, 851972, 1610612738, 0, 851973, 1610612738, 0, 851974, 1610612738, 0, 851975, 1610612738, 0, 851976, 1610612738, 0, 851977, 1610612738, 0, 851978, 1610612738, 0, 851979, 1610612738, 0, 851980, 1610612738, 0, 851981, 1610612738, 0, 851982, 1610612738, 0, 851983, 1610612738, 0, 851984, 1610612738, 0, 851985, 1610612738, 0, 851986, 1610612738, 0, 851987, 1610612738, 0, 851988, 1610612738, 0, 851989, 1610612738, 0, 851990, 1610612738, 0, 851991, 1610612738, 0, 851992, 1610612738, 0, 851993, 1610612738, 0, 851994, 1610612738, 0, 851995, 1610612738, 0, 851996, 1610612738, 0, 983038, 1610612738, 0, 983039, 1610612738, 0, 917504, 1610612738, 0, 917505, 1610612738, 0, 917506, 1610612738, 0, 917507, 1610612738, 0, 917508, 1610612738, 0, 917509, 1610612738, 0, 917510, 1610612738, 0, 917511, 1610612738, 0, 917512, 1610612738, 0, 917513, 1610612738, 0, 917514, 1610612738, 0, 917515, 1610612738, 0, 917516, 1610612738, 0, 917517, 1610612738, 0, 917518, 1610612738, 0, 917519, 1610612738, 0, 917520, 1610612738, 0, 917521, 1610612738, 0, 917522, 1610612738, 0, 917523, 1610612738, 0, 917524, 1610612738, 0, 917525, 1610612738, 0, 917526, 1610612738, 0, 917527, 1610612738, 0, 917528, 1610612738, 0, 917529, 1610612738, 0, 917530, 1610612738, 0, 917531, 1610612738, 0, 917532, 1610612738, 0, 1048574, 1610612738, 0, 1048575, 1610612738, 0, 983040, 1610612738, 0, 983041, 1610612738, 0, 983042, 1610612738, 0, 983043, 1610612738, 0, 983044, 1610612738, 0, 983045, 1610612738, 0, 983046, 1610612738, 0, 983047, 1610612738, 0, 983048, 1610612738, 0, 983049, 1610612738, 0, 983050, 1610612738, 0, 983051, 1610612738, 0, 983052, 1610612738, 0, 983053, 1610612738, 0, 983054, 1610612738, 0, 983055, 1610612738, 0, 983056, 1610612738, 0, 983057, 1610612738, 0, 983058, 1610612738, 0, 983059, 1610612738, 0, 983060, 1610612738, 0, 983061, 1610612738, 0, 983062, 1610612738, 0, 983063, 1610612738, 0, 983064, 1610612738, 0, 983065, 1610612738, 0, 983066, 1610612738, 0, 983067, 1610612738, 0, 983068, 1610612738, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 786, 604 )
script = ExtResource( 6 )
enemy_scene = ExtResource( 5 )

[node name="SpawnPoint1" type="Position2D" parent="Spawner"]
position = Vector2( 103, 124 )

[node name="SpawnPoint2" type="Position2D" parent="Spawner"]
position = Vector2( -281, 124 )

[node name="SpawnPoint3" type="Position2D" parent="Spawner"]
position = Vector2( -77, 124 )

[node name="SpawnPoint4" type="Position2D" parent="Spawner"]
position = Vector2( -533, 124 )

[node name="SpawnPoint5" type="Position2D" parent="Spawner"]
position = Vector2( -797, 124 )

[node name="GUI" parent="." instance=ExtResource( 2 )]
